# test-libtorch

./: CMakeLists.txt  how to create executable.txt  linear_regression.cpp  linear_regression.py
libtorch/: build-hash  build-version
libtorch/include/ATen/: CPUFunctions_inl.h  CUDAFunctions_inl.h  CompositeExplicitAutogradFunctions_inl.h  CompositeImplicitAutogradFunctions_inl.h  Config.h  Functions.h  MPSFunctions_inl.h  MethodOperators.h  NativeFunctions.h  NativeMetaFunctions.h  Operators.h  RedispatchFunctions.h  RegistrationDeclarations.h  VmapGeneratedPlumbing.h
libtorch/include/ATen/core/: TensorBody.h  aten_interned_strings.h  enum_tag.h
libtorch/include/ATen/ops/: sum_native.h  threshold_backward_native.h
libtorch/include/caffe2/core/: macros.h
libtorch/lib/pkgconfig/: libcpuinfo.pc  protobuf-lite.pc  protobuf.pc  sleef.pc
libtorch/share/cmake/ATen/: ATenConfig.cmake
libtorch/share/cmake/Caffe2/: Caffe2Config.cmake  Caffe2Targets.cmake
libtorch/share/cmake/kineto/: kinetoLibraryConfig.cmake
libtorch/share/cpuinfo/: cpuinfo-targets.cmake
old_linear_regression/: linear_regression.h  linear_regression_main.cpp  linear_regression_model.cpp
